restyle and fix CSS jump when active player changes

--- a/client/index.less
+++ b/client/index.less
@@ -1,5 +1,5 @@
 @darkgradient: linear-gradient(292deg, wheat, gray);
-@lightgradient: linear-gradient(292deg, rgba(10, 238, 238, 0.97), wheat);
+@lightgradient: linear-gradient(292deg, RGBA(206, 71, 0, 1), wheat);
 @dropshadow: 8px 8px 4px rgba(0,0,0,0.75);
 @playercolor: rgba(4, 184, 255, 0.75);
 @spaceborderwidth: 5px;
@@ -16,7 +16,7 @@ body{
 #container{
   text-align: center;
   margin: 0 auto;
-  background-color: rgba(130, 125, 125, 0.6);
+  background-color: rgba(130, 125, 125, 0.8);
 }
 #controls{
   color: white;
@@ -39,10 +39,10 @@ body{
   padding: 5px;
   -webkit-box-shadow: @dropshadow;
   background-color: @controlcolor;
-  border: 5px transparent solid;
 }
 .player{
   margin: auto 20px;
+  border: 5px transparent solid;
 }
 #p1{
   background-color: rgba(233, 75, 9, 0.75);
